Add bios and update descriptions

--- a/about.html
+++ b/about.html
@@ -161,48 +161,54 @@
           <a href="committees.html#consulting" class="text-decoration-none text-dark">
             <img src="img/committee-icons/co.png" class="pillar-img invert-img" alt="Consulting">
             <h5>Consulting</h5>
-            <p class="text-justify text-md-center">Lorem ipsum dolor sit amet, eam ex summo zril legendos, eu omnium efficiantur usu. At duo impetus eleifend erroribus. Consul mucius expetenda usu in, ad iriure admodum mei. In per periculis patrioque, omnis mutat adversarium eu eam, ne
-              sit atqui.</p>
+            <p class="text-justify text-md-center">
+              The Consulting Committee aims to educate members through exposure to real life case studies. Honing their analytical skills and developing innovative strategies to solve a variety of business problems, members are prepared for a career in consulting, mastering project management techniques and insightful frameworks.
+            </p>
           </a>
         </div>
         <div class="col-md-6 col-lg-4 mx-auto">
           <a href="committees.html#finance" class="text-decoration-none text-dark">
             <img src="img/committee-icons/fi.png" class="pillar-img invert-img" alt="Finance">
             <h5>Finance</h5>
-            <p class="text-justify text-md-center">Lorem ipsum dolor sit amet, eam ex summo zril legendos, eu omnium efficiantur usu. At duo impetus eleifend erroribus. Consul mucius expetenda usu in, ad iriure admodum mei. In per periculis patrioque, omnis mutat adversarium eu eam, ne
-              sit atqui.</p>
+            <p class="text-justify text-md-center">
+              The Finance Committee provides knowledge of the basic principles of finance and a thorough understanding of the finance industry. Members will leave with reliable skills needed to not only ace technical finance interviews but also succeed in future finance-related work experiences.
+            </p>
           </a>
         </div>
         <div class="col-md-6 col-lg-4 mx-auto">
           <a href="committees.html#marketing" class="text-decoration-none text-dark">
             <img src="img/committee-icons/mk.png" class="pillar-img invert-img" alt="Marketing">
             <h5>Marketing</h5>
-            <p class="text-justify text-md-center">Lorem ipsum dolor sit amet, eam ex summo zril legendos, eu omnium efficiantur usu. At duo impetus eleifend erroribus. Consul mucius expetenda usu in, ad iriure admodum mei. In per periculis patrioque, omnis mutat adversarium eu eam, ne
-              sit atqui.</p>
+            <p class="text-justify text-md-center">
+              The Marketing Committee dives head-first into the intersection between business and the market with a comprehensive series of case studies. Learning to analyze, predict, and shape consumer reactions across specific industry landscapes, members will develop a sense of business creativity and the strategy ideation skills to suppport their acumen.
+            </p>
           </a>
         </div>
         <div class="col-md-6 col-lg-4 mx-auto">
           <a href="committees.html#technology" class="text-decoration-none text-dark">
             <img src="img/committee-icons/tc.png" class="pillar-img invert-img" alt="Technology">
             <h5>Technology</h5>
-            <p class="text-justify text-md-center">Lorem ipsum dolor sit amet, eam ex summo zril legendos, eu omnium efficiantur usu. At duo impetus eleifend erroribus. Consul mucius expetenda usu in, ad iriure admodum mei. In per periculis patrioque, omnis mutat adversarium eu eam, ne
-              sit atqui.</p>
+            <p class="text-justify text-md-center">
+              The Tech Committee explores and bridges the gap between technology and business. Members will not only advance their programming skills needed for data analysis and web development but will also gain a holistic view of how these skills are integrated into business.
+            </p>
           </a>
         </div>
         <div class="col-md-6 col-lg-4 mx-auto">
           <a href="committees.html#visual-media" class="text-decoration-none text-dark">
             <img src="img/committee-icons/vm.png" class="pillar-img invert-img" alt="Visual Media">
             <h5>Visual Media</h5>
-            <p class="text-justify text-md-center">Lorem ipsum dolor sit amet, eam ex summo zril legendos, eu omnium efficiantur usu. At duo impetus eleifend erroribus. Consul mucius expetenda usu in, ad iriure admodum mei. In per periculis patrioque, omnis mutat adversarium eu eam, ne
-              sit atqui.</p>
+            <p class="text-justify text-md-center">
+              The Visual Media Committee combines photography, graphic design, and cinematography in a comprehensive curriculum that explores the intersection between business and creative media. From exploring the technical side of branding to building and refining  fundamental design skills, members will develop a marketable skillset of each art form.
+            </p>
           </a>
         </div>
         <div class="col-md-6 col-lg-4 mx-auto">
           <a href="upper-division.html" class="text-decoration-none text-dark">
             <img src="img/committee-icons/ud.png" class="pillar-img invert-img" alt="Upper Division">
             <h5>Upper Division</h5>
-            <p class="text-justify text-md-center">Lorem ipsum dolor sit amet, eam ex summo zril legendos, eu omnium efficiantur usu. At duo impetus eleifend erroribus. Consul mucius expetenda usu in, ad iriure admodum mei. In per periculis patrioque, omnis mutat adversarium eu eam, ne
-              sit atqui.</p>
+            <p class="text-justify text-md-center">
+              The Upper Division Committee puts the technical skills garnered from the industry-specific committees into practice, taking on a diverse set of consulting projects. With an emphasis on impactful, hands-on engagement, the Upper Division project teams have worked with countless clients ranging from Fortune 500 firms to budding start-ups.
+            </p>
           </a>
         </div>
       </div>
