--- a/apply.html
+++ b/apply.html
@@ -92,7 +92,7 @@
               <div class="timeline-description order-sm-3 pb-1">
                 <h1>Infosession 1</h1>
                 <h5 class="text-muted">@ 8-10pm Barrows 166</h5>
-                <p>Lorem ipsum dolor sit amet, ea doctus ponderum duo, usu cu dicta delicata. Eu nostro mentitum eam, mel omnium dignissim disputationi an. Quo eu enim exerci graece, vim ad aeque necessitatibus. Nihil nostrud cu vix, mel ut etiam ubique definitionem. Mea ea vidisse eripuit.</p>
+                <p>Come meet our members and learn about the amazing opportunities and community PBL has to offer! You'll have the chance to hear more about our industry-specific committees and project teams, our favorite PBL experiences, and the vast professional and personal resources available to our members.</p>
               </div>
             </li>
             <li class="timeline-event">
@@ -105,7 +105,7 @@
               <div class="timeline-description order-sm-3 pb-1">
                 <h1>Infosession 2</h1>
                 <h5 class="text-muted">@ 8-10pm Barrows 126</h5>
-                <p>Lorem ipsum dolor sit amet, ea doctus ponderum duo, usu cu dicta delicata. Eu nostro mentitum eam, mel omnium dignissim disputationi an. Quo eu enim exerci graece, vim ad aeque necessitatibus. Nihil nostrud cu vix, mel ut etiam ubique definitionem. Mea ea vidisse eripuit.</p>
+                <p>Mirroring the Infosession #1, this event is another opportunity to come meet our members and learn about the amazing opportunities and community PBL has to offer! While we welcome interested applicants to mingle with our officers in any capacity, you are not required to attend both infosessions.</p>
               </div>
             </li>
             <li class="timeline-event">
@@ -118,7 +118,7 @@
               <div class="timeline-description order-sm-3 pb-1">
                 <h1>Social Mixer</h1>
                 <h5 class="text-muted">@ 7-9pm Stephens Lounge</h5>
-                <p>Lorem ipsum dolor sit amet, ea doctus ponderum duo, usu cu dicta delicata. Eu nostro mentitum eam, mel omnium dignissim disputationi an. Quo eu enim exerci graece, vim ad aeque necessitatibus. Nihil nostrud cu vix, mel ut etiam ubique definitionem. Mea ea vidisse eripuit.</p>
+                <p>Head out to MLK's Stephens Lounge for the perfect opportunity to meet and get to know our members on a more personal level before submitting your application. Whether you have a burning question about a particular committee or just want to leave a lasting impression before interviews, our Social Mixer is the perfect chance to talk about your personal or professional passions and gauge if PBL is right for you!</p>
               </div>
             </li>
             <li class="timeline-event">
@@ -131,9 +131,9 @@
               <div class="timeline-description order-sm-3 pb-1">
                 <h1>Application Due</h1>
                 <h5 class="text-muted">@ 9pm</h5>
-                <p>Lorem ipsum dolor sit amet, ea doctus ponderum duo, usu cu dicta delicata. Eu nostro mentitum eam, mel omnium dignissim disputationi an. Quo eu enim exerci graece, vim ad aeque necessitatibus. Nihil nostrud cu vix, mel ut etiam ubique definitionem. Mea ea vidisse eripuit.</p>
+                <p>Fill out your application below by 9 PM on Friday, January 31st. The application includes both personal information as well as questions to gauge interest, experiences, and personal fit. We also require additional documents such as your resume and optional supplementary material. For personal insights and tips or general questions, come talk to our officers tabling on Sproul or at any of our recruitment events!</p>
                 <a href="https://docs.google.com/forms/d/e/1FAIpQLSd5huzuPJO3MAthDAEJD9AW7S_j80XdtTkS-s1myF29UbDUvA/viewform">
-                  <button type="button" class="btn btn-dark btn-lg">Apply Here</button>
+                  <button type="button" class="btn btn-dark">Apply Here</button>
                 </a>
               </div>
             </li>
@@ -141,9 +141,6 @@
         </div>
       </div>
       </div>
-      <!-- <div class="row">
-        <img src="https://scontent-sjc3-1.xx.fbcdn.net/v/t1.0-9/69775350_10156802841901491_596564304510058496_o.png?_nc_cat=103&_nc_ohc=3T7T9AnLQHQAX8w5i4s&_nc_ht=scontent-sjc3-1.xx&oh=7f65789ee2253d8c30ee3c9909f75d19&oe=5EA95B35" class="img-fluid" alt="">
-      </div> -->
     </section>
     <section class="container pb-5 text-center">
     </section>
