--- a/executive.html
+++ b/executive.html
@@ -68,48 +68,130 @@
   </header>
 
   <main>
-    <section class="container py-5">
-      <h1 class="display-4 text-center">Leadership</h1>
+    <section class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto">
-          <ul class="list-unstyled">
-            <li class="media">
-              <img class="bio-img img-thumbnail rounded-circle mr-3" src="https://berkeley-pbl.com/imgs/ex/darren.jpg" alt="Generic placeholder image">
-              <div class="media-body">
-                <p class="mt-0 mb-1 h5">
-                  <h5 class="h5">Darren Kim</h5>
-                  <span class="h6 role"> | MVP </span>
-                </p>
-                Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue
-                felis in faucibus.
+          <section class="py-4">
+            <p>
+              The Executive team manages the smooth day-to-day operations while planning the semester's large-scale events and activities. From co-hosting speaker panels to leading our premier professional development workshops, the Executive team embodies the PBL values and the hallmarks of personal and professional success.
+            </p>
+          </section>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-4 col-11 col-sm-7 col-md-6 mx-auto">
+          <figure class="bio-card text-center border border-dark">
+            <img class="w-100 bio-rect-img" src="img/ex/darren.jpg" alt="Generic placeholder image">
+            <figcaption class="pb-3 mx-2 caption text-light">
+              <div class="">
+                <div class="bio-visible rounded-top py-3 px-1">
+                  <h5 class="h5">Nicholas Paul</h5>
+                  <span class="h6 role">President</span>
+                </div>
+                <div class="bio-hidden px-1">
+                  <p>
+                    Hello my name is Darren and I like making finger guns
+                  </p>
+                  <a class="text-light h4" href="https://www.linkedin.com/in/hanminkim/"><i class="fab fa-linkedin"></i></a>
+                </div>
               </div>
-              <a class="text-dark align-self-start bio-linkedin" href="https://www.linkedin.com/in/darrenkim21/"><i class="fab fa-linkedin"></i></a>
-            </li>
-            <li class="media my-4">
-              <img class="bio-img img-thumbnail rounded-circle mr-3" src="https://berkeley-pbl.com/imgs/ex/darren.jpg" alt="Generic placeholder image">
-              <div class="media-body">
-                <p class="mt-0 mb-1 h5">
+            </figcaption>
+          </figure>
+        </div>
+        <div class="col-lg-4 col-11 col-sm-7 col-md-6 mx-auto">
+          <figure class="bio-card text-center border border-dark">
+            <img class="w-100 bio-rect-img" src="img/ex/darren.jpg" alt="Generic placeholder image">
+            <figcaption class="pb-3 mx-2 caption text-light">
+              <div class="">
+                <div class="bio-visible rounded-top py-3 px-1">
                   <h5 class="h5">Darren Kim</h5>
-                  <span class="h6 role"> | MVP </span>
-                </p>
-                Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue
-                felis in faucibus.
+                  <span class="h6 role">Senior Vice President</span>
+                </div>
+                <div class="bio-hidden px-1">
+                  <p>
+                    Hello my name is Darren and I like making finger guns
+                  </p>
+                  <a class="text-light h4" href="https://www.linkedin.com/in/brentonlaw/"><i class="fab fa-linkedin"></i></a>
+                </div>
               </div>
-              <a class="text-dark align-self-start bio-linkedin" href="https://www.linkedin.com/in/darrenkim21/"><i class="fab fa-linkedin"></i></a>
-            </li>
-            <li class="media">
-              <img class="bio-img img-thumbnail rounded-circle mr-3" src="https://berkeley-pbl.com/imgs/ex/darren.jpg" alt="Generic placeholder image">
-              <div class="media-body">
-                <p class="mt-0 mb-1 h5">
-                  <h5 class="h5">Darren Kim</h5>
-                  <span class="h6 role"> | MVP </span>
-                </p>
-                Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue
-                felis in faucibus.
+            </figcaption>
+          </figure>
+        </div>
+        <div class="col-lg-4 col-11 col-sm-7 col-md-6 mx-auto">
+          <figure class="bio-card text-center border border-dark">
+            <img class="w-100 bio-rect-img" src="img/ex/darren.jpg" alt="Generic placeholder image">
+            <figcaption class="pb-3 mx-2 caption text-light">
+              <div class="">
+                <div class="bio-visible rounded-top py-3 px-1">
+                  <h5 class="h5">Claire Yoon</h5>
+                  <span class="h6 role">Vice President of Campus Affairs</span>
+                </div>
+                <div class="bio-hidden px-1">
+                  <p>
+                    Hello my name is Darren and I like making finger guns
+                  </p>
+                  <a class="text-light h4" href="https://www.linkedin.com/in/katengo/"><i class="fab fa-linkedin"></i></a>
+                </div>
               </div>
-              <a class="text-dark align-self-start bio-linkedin" href="https://www.linkedin.com/in/darrenkim21/"><i class="fab fa-linkedin"></i></a>
-            </li>
-          </ul>
+            </figcaption>
+          </figure>
+        </div>
+        <div class="col-lg-4 col-11 col-sm-7 col-md-6 mx-auto">
+          <figure class="bio-card text-center border border-dark">
+            <img class="w-100 bio-rect-img" src="img/ex/darren.jpg" alt="Generic placeholder image">
+            <figcaption class="pb-3 mx-2 caption text-light">
+              <div class="">
+                <div class="bio-visible rounded-top py-3 px-1">
+                  <h5 class="h5">Michelle Lin</h5>
+                  <span class="h6 role">Vice President of Corporate Relations</span>
+                </div>
+                <div class="bio-hidden px-1">
+                  <p>
+                    Hello my name is Darren and I like making finger guns
+                  </p>
+                  <a class="text-light h4" href="https://www.linkedin.com/in/sydney-ty/"><i class="fab fa-linkedin"></i></a>
+                </div>
+              </div>
+            </figcaption>
+          </figure>
+        </div>
+        <div class="col-lg-4 col-11 col-sm-7 col-md-6 mx-auto">
+          <figure class="bio-card text-center border border-dark">
+            <img class="w-100 bio-rect-img" src="img/ex/darren.jpg" alt="Generic placeholder image">
+            <figcaption class="pb-3 mx-2 caption text-light">
+              <div class="">
+                <div class="bio-visible rounded-top py-3 px-1">
+                  <h5 class="h5">Alice Chen</h5>
+                  <span class="h6 role">Vice President of Projects</span>
+                </div>
+                <div class="bio-hidden px-1">
+                  <p>
+                    Hello my name is Darren and I like making finger guns
+                  </p>
+                  <a class="text-light h4" href="https://www.linkedin.com/in/sydney-ty/"><i class="fab fa-linkedin"></i></a>
+                </div>
+              </div>
+            </figcaption>
+          </figure>
+        </div>
+        <div class="col-lg-4 col-11 col-sm-7 col-md-6 mx-auto">
+          <figure class="bio-card text-center border border-dark">
+            <img class="w-100 bio-rect-img" src="img/ex/darren.jpg" alt="Generic placeholder image">
+            <figcaption class="pb-3 mx-2 caption text-light">
+              <div class="">
+                <div class="bio-visible rounded-top py-3 px-1">
+                  <h5 class="h5">Jeremy Mui</h5>
+                  <span class="h6 role">Vice President of Operations</span>
+                </div>
+                <div class="bio-hidden px-1">
+                  <p>
+                    Hello my name is Darren and I like making finger guns
+                  </p>
+                  <a class="text-light h4" href="https://www.linkedin.com/in/sydney-ty/"><i class="fab fa-linkedin"></i></a>
+                </div>
+              </div>
+            </figcaption>
+          </figure>
         </div>
       </div>
     </section>
