--- a/internal-networking.html
+++ b/internal-networking.html
@@ -71,26 +71,26 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto">
-          <section class="committee">
-            <h1 class="display-4 text-center">Leadership</h1>
-            <p class="pb-3">While not a committee that takes applicants, the Internal Networking committee is responsible for fostering the social environment of the organization. From planning the semesterly Member's Retreat to organizing countless social events throughout the semester, the Internal Networking committee works hard to encourage a tight-knight PBL community.
+          <section class="py-4">
+            <p>
+              While not a committee that takes applicants, the Internal Networking committee is responsible for fostering the social environment of the organization. From planning the semesterly Member's Retreat to organizing countless social events throughout the semester, the Internal Networking committee works hard to encourage a tight-knight PBL community.
             </p>
           </section>
         </div>
       </div>
       <div class="row">
-        <div class="col-lg-3 col-11 col-sm-7 col-md-6 mx-auto">
+        <div class="col-lg-3 col-11 col-sm-7 col-md-6 mx-auto pb-3">
           <figure class="bio-card text-center border border-dark">
             <img class="w-100 bio-rect-img" src="img/ex/darren.jpg" alt="Generic placeholder image">
             <figcaption class="pb-3 mx-2 caption text-light">
               <div class="">
                 <div class="bio-visible rounded-top py-3 px-1">
-                  <h5 class="h5">Darren Kim</h5>
+                  <h5 class="h5">Austin Kim</h5>
                   <span class="h6 role">Internal Networking Chair</span>
                 </div>
                 <div class="bio-hidden px-1">
-                  <p> Hello my name is Darren and I like making finger guns </p>
-                  <a class="text-light h4" href="https://www.linkedin.com/in/darrenkim21/"><i class="fab fa-linkedin"></i></a>
+                  <p>Hello! I am Austin, a fourth year studying Economics. It is my honor and privilege to serve as an IN chair for my last semester in PBL, and I am really looking forward to meeting everyone!</p>
+                  <a class="text-light h4" href="https://www.linkedin.com/in/hanminkim/"><i class="fab fa-linkedin"></i></a>
                 </div>
               </div>
             </figcaption>
@@ -102,12 +102,12 @@
             <figcaption class="pb-3 mx-2 caption text-light">
               <div class="">
                 <div class="bio-visible rounded-top py-3 px-1">
-                  <h5 class="h5">Darren Kim</h5>
+                  <h5 class="h5">Brenton Law</h5>
                   <span class="h6 role">Internal Networking Chair</span>
                 </div>
                 <div class="bio-hidden px-1">
-                  <p> Hello my name is Darren and I like making finger guns </p>
-                  <a class="text-light h4" href="https://www.linkedin.com/in/darrenkim21/"><i class="fab fa-linkedin"></i></a>
+                  <p>Hello! I’m Brenton, and I’m a sophomore majoring in Applied Math and Statistics. Professionally, I’m interested in pursuing a career somewhere around the intersection of statistics, data, and finance. Outside of the club, I enjoy watching football and attempting to cook new dishes!</p>
+                  <a class="text-light h4" href="https://www.linkedin.com/in/brentonlaw/"><i class="fab fa-linkedin"></i></a>
                 </div>
               </div>
             </figcaption>
@@ -119,12 +119,12 @@
             <figcaption class="pb-3 mx-2 caption text-light">
               <div class="">
                 <div class="bio-visible rounded-top py-3 px-1">
-                  <h5 class="h5">Darren Kim</h5>
+                  <h5 class="h5">Kate Ngo</h5>
                   <span class="h6 role">Internal Networking Chair</span>
                 </div>
                 <div class="bio-hidden px-1">
-                  <p> Hello my name is Darren and I like making finger guns </p>
-                  <a class="text-light h4" href="https://www.linkedin.com/in/darrenkim21/"><i class="fab fa-linkedin"></i></a>
+                  <p>Hi, my name is Kate! I am a second year hoping to study Political Science and Economics. This is my third semester in PBL and I am very excited to be an IN chair this semester. I am looking forward to meeting everyone and seeing you all at our events.</p>
+                  <a class="text-light h4" href="https://www.linkedin.com/in/katengo/"><i class="fab fa-linkedin"></i></a>
                 </div>
               </div>
             </figcaption>
@@ -136,12 +136,12 @@
             <figcaption class="pb-3 mx-2 caption text-light">
               <div class="">
                 <div class="bio-visible rounded-top py-3 px-1">
-                  <h5 class="h5">Darren Kim</h5>
+                  <h5 class="h5">Sydney Ty</h5>
                   <span class="h6 role">Internal Networking Chair</span>
                 </div>
                 <div class="bio-hidden px-1">
-                  <p> Hello my name is Darren and I like making finger guns </p>
-                  <a class="text-light h4" href="https://www.linkedin.com/in/darrenkim21/"><i class="fab fa-linkedin"></i></a>
+                  <p>My name is Sydney, and I’m a second year studying Data Science. Although I’ve only been in PBL for one semester, it’s already shaped my college experience so much. That’s why I’m super hyped to be one of your IN chairs and I look forward to a great semester with you all!</p>
+                  <a class="text-light h4" href="https://www.linkedin.com/in/sydney-ty/"><i class="fab fa-linkedin"></i></a>
                 </div>
               </div>
             </figcaption>
@@ -149,7 +149,20 @@
         </div>
       </div>
     </div>
-    <section class="container-fluid py-5 text-center">
+    <hr>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-8 mx-auto text-center">
+          <section class="py-3">
+            <h1 class="display-4 text-center">Gallery</h1>
+            <p>
+              From ice skating and dodgeball to weekend outings to Santa Cruz or Lake Tahoe, our Internal Networking chairs prepare social events of all kinds throughout the semester.
+            </p>
+          </section>
+        </div>
+      </div>
+    </div>
+    <section class="container-fluid pb-5 text-center">
       <div class="row">
         <div class="col-lg-3 col-md-4 col-sm-6 mx-auto p-2">
             <img src="img/IMG_5205.jpg" class="community-img">
@@ -212,9 +225,9 @@
         <div class="footer-text">© Berkeley PBL 2020</div>
         <div class="footer-text">
           Website created and designed by
-          <a class="text-light" href="https://www.linkedin.com/in/darrenkim21/">Darren Kim</a>,
+          <a class="text-light" href="">Darren Kim</a>,
           <a class="text-light" href="https://www.linkedin.com/in/dennis-pham-342638170/">Dennis Pham</a>,
-          <a class="text-light" href="https://www.linkedin.com/in/darrenkim21/">Grace Chi</a>, and
+          <a class="text-light" href="">Grace Chi</a>, and
           <a class="text-light" href="https://www.linkedin.com/in/jeremymui/">Jeremy Mui</a>
         </div>
       </div>
