Update exec LinkedIns

--- a/executive.html
+++ b/executive.html
@@ -92,7 +92,7 @@
                   <p>
                     Hello my name is Darren and I like making finger guns
                   </p>
-                  <a class="text-light h4" href="https://www.linkedin.com/in/hanminkim/"><i class="fab fa-linkedin"></i></a>
+                  <a class="text-light h4" href="https://www.linkedin.com/in/nicholas-paul/"><i class="fab fa-linkedin"></i></a>
                 </div>
               </div>
             </figcaption>
@@ -111,7 +111,7 @@
                   <p>
                     Hello my name is Darren and I like making finger guns
                   </p>
-                  <a class="text-light h4" href="https://www.linkedin.com/in/brentonlaw/"><i class="fab fa-linkedin"></i></a>
+                  <a class="text-light h4" href="https://www.linkedin.com/in/darrenkim21/"><i class="fab fa-linkedin"></i></a>
                 </div>
               </div>
             </figcaption>
@@ -130,7 +130,7 @@
                   <p>
                     Hello my name is Darren and I like making finger guns
                   </p>
-                  <a class="text-light h4" href="https://www.linkedin.com/in/katengo/"><i class="fab fa-linkedin"></i></a>
+                  <a class="text-light h4" href="https://www.linkedin.com/in/claireyoon22/"><i class="fab fa-linkedin"></i></a>
                 </div>
               </div>
             </figcaption>
@@ -149,7 +149,7 @@
                   <p>
                     Hello my name is Darren and I like making finger guns
                   </p>
-                  <a class="text-light h4" href="https://www.linkedin.com/in/sydney-ty/"><i class="fab fa-linkedin"></i></a>
+                  <a class="text-light h4" href="https://www.linkedin.com/in/michellealin/"><i class="fab fa-linkedin"></i></a>
                 </div>
               </div>
             </figcaption>
@@ -168,7 +168,7 @@
                   <p>
                     Hello my name is Darren and I like making finger guns
                   </p>
-                  <a class="text-light h4" href="https://www.linkedin.com/in/sydney-ty/"><i class="fab fa-linkedin"></i></a>
+                  <a class="text-light h4" href="https://www.linkedin.com/in/alicechenaac/"><i class="fab fa-linkedin"></i></a>
                 </div>
               </div>
             </figcaption>
@@ -187,7 +187,7 @@
                   <p>
                     Hello my name is Darren and I like making finger guns
                   </p>
-                  <a class="text-light h4" href="https://www.linkedin.com/in/sydney-ty/"><i class="fab fa-linkedin"></i></a>
+                  <a class="text-light h4" href="https://www.linkedin.com/in/jeremymui/"><i class="fab fa-linkedin"></i></a>
                 </div>
               </div>
             </figcaption>
