--- a/upper-division.html
+++ b/upper-division.html
@@ -71,11 +71,15 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto">
-          <p class="pb-3">Lorem ipsum dolor sit amet, porro scripta prodesset ei per. Usu fugit soluta mediocrem ut. Vero oportere ut sit, lobortis liberavisse at nam. Mel nonumes graecis voluptatibus no. No vix meliore nusquam placerat, legendos
-              ocurreret
-              contentiones ex eam. Has detraxit assentior in.
-
-              Placerat tractatos omittantur ut est. Quo laoreet liberavisse at, ea qui veniam impedit. Ex verear iisque intellegat his. Ad sea suas natum, in sonet labitur vis. Eros hendrerit.
+          <section class="py-4">
+            <p>
+              The Upper Division committee spearhead PBL's consulting services. Working with a wide array of clients from Fortune 500 firms to budding start-ups, Upper Division teams allow members to take the knowledge and experience from their industry-specific committee curriculums and apply them to real world projects.
+            </p>
+          </section>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-8 mx-auto">
           <section class="committee">
             <h1 class="display-4 text-center">Anthony and Carrington</h1>
             </p>
@@ -86,12 +90,14 @@
                   <figcaption class="pb-3 mx-2 caption text-light">
                     <div class="">
                       <div class="bio-visible rounded-top py-3 px-1">
-                        <h5 class="h5">Darren Kim</h5>
+                        <h5 class="h5">Anthony Chen</h5>
                         <span class="h6 role">Project Manager</span>
                       </div>
                       <div class="bio-hidden px-1">
-                        <p> Hello my name is Darren and I like making finger guns </p>
-                        <a class="text-light h4" href="https://www.linkedin.com/in/darrenkim21/"><i class="fab fa-linkedin"></i></a>
+                        <p>
+                          Hello! I am Anthony, a junior majoring in Business Administration, and this will be my fifth semester in PBL. Outside of business and classes, I spend most of my time pursuing urban dance and photography.
+                        </p>
+                        <a class="text-light h4" href="https://www.linkedin.com/in/anthonychenac/"><i class="fab fa-linkedin"></i></a>
                       </div>
                     </div>
                   </figcaption>
@@ -103,12 +109,14 @@
                   <figcaption class="pb-3 mx-2 caption text-light">
                     <div class="">
                       <div class="bio-visible rounded-top py-3 px-1">
-                        <h5 class="h5">Darren Kim</h5>
+                        <h5 class="h5">Carrington Park</h5>
                         <span class="h6 role">Project Manager</span>
                       </div>
                       <div class="bio-hidden px-1">
-                        <p> Hello my name is Darren and I like making finger guns </p>
-                        <a class="text-light h4" href="https://www.linkedin.com/in/darrenkim21/"><i class="fab fa-linkedin"></i></a>
+                        <p>
+                          Hi! I’m Carrington, and I’m a psych major graduating this semester! This is my third semester being a Project Manager for PBL, and I most recently managed projects for WeWork and The RealReal.
+                        </p>
+                        <a class="text-light h4" href="https://www.linkedin.com/in/carringtonpark/"><i class="fab fa-linkedin"></i></a>
                       </div>
                     </div>
                   </figcaption>
@@ -125,12 +133,14 @@
                   <figcaption class="pb-3 mx-2 caption text-light">
                     <div class="">
                       <div class="bio-visible rounded-top py-3 px-1">
-                        <h5 class="h5">Darren Kim</h5>
+                        <h5 class="h5">Henry Cheong</h5>
                         <span class="h6 role">Project Manager</span>
                       </div>
                       <div class="bio-hidden px-1">
-                        <p> Hello my name is Darren and I like making finger guns </p>
-                        <a class="text-light h4" href="https://www.linkedin.com/in/darrenkim21/"><i class="fab fa-linkedin"></i></a>
+                        <p>
+                          Hi everyone! I’m a sophomore studying Data Science whose interest lies at the intersection of the uses of industry data in the function of consumer-driven business decisions. I really enjoy discussing current events, solving brain teasers, and finding Hidden Pictures in Highlights magazines.
+                        </p>
+                        <a class="text-light h4" href="https://www.linkedin.com/in/cheongh/"><i class="fab fa-linkedin"></i></a>
                       </div>
                     </div>
                   </figcaption>
@@ -142,12 +152,12 @@
                   <figcaption class="pb-3 mx-2 caption text-light">
                     <div class="">
                       <div class="bio-visible rounded-top py-3 px-1">
-                        <h5 class="h5">Darren Kim</h5>
+                        <h5 class="h5">Kai Chen</h5>
                         <span class="h6 role">Project Manager</span>
                       </div>
                       <div class="bio-hidden px-1">
-                        <p> Hello my name is Darren and I like making finger guns </p>
-                        <a class="text-light h4" href="https://www.linkedin.com/in/darrenkim21/"><i class="fab fa-linkedin"></i></a>
+                        <p>Hi! I’m a 3rd year studying Economics and Data Science, and this will be my 5th semester in PBL! I’ve had tons of fun and great professional experiences working with varies companies throughout my time in UD! PBL has really shaped my college experience and I’m excited to be leading a project with Henry this upcoming semester! Outside of PBL, I enjoy playing tennis, watching TV, annoying friends and mentoring high school students!</p>
+                        <a class="text-light h4" href="https://www.linkedin.com/in/kailchen/"><i class="fab fa-linkedin"></i></a>
                       </div>
                     </div>
                   </figcaption>
@@ -157,12 +167,6 @@
           </section>
           <section class="committee">
             <h1 class="display-4 text-center">Conor and Roger</h1>
-            <p class="pb-3">Lorem ipsum dolor sit amet, porro scripta prodesset ei per. Usu fugit soluta mediocrem ut. Vero oportere ut sit, lobortis liberavisse at nam. Mel nonumes graecis voluptatibus no. No vix meliore nusquam placerat, legendos
-              ocurreret
-              contentiones ex eam. Has detraxit assentior in.
-
-              Placerat tractatos omittantur ut est. Quo laoreet liberavisse at, ea qui veniam impedit. Ex verear iisque intellegat his. Ad sea suas natum, in sonet labitur vis. Eros hendrerit.
-            </p>
             <div class="row">
               <div class="col-11 col-sm-7 col-md-6 mx-auto">
                 <figure class="bio-card text-center border border-dark">
@@ -170,12 +174,14 @@
                   <figcaption class="pb-3 mx-2 caption text-light">
                     <div class="">
                       <div class="bio-visible rounded-top py-3 px-1">
-                        <h5 class="h5">Darren Kim</h5>
+                        <h5 class="h5">Conor Richard</h5>
                         <span class="h6 role">Project Manager</span>
                       </div>
                       <div class="bio-hidden px-1">
-                        <p> Hello my name is Darren and I like making finger guns </p>
-                        <a class="text-light h4" href="https://www.linkedin.com/in/darrenkim21/"><i class="fab fa-linkedin"></i></a>
+                        <p>
+                          Hi! I’m a sophomore, and this will be my third semester in PBL! I’m super excited to lead a client team in the Upper Division with Roger! Outside of PBL, I like flying planes, selling shoes, investing in stocks, traveling, and playing intramural soccer and basketball!
+                        </p>
+                        <a class="text-light h4" href="https://www.linkedin.com/in/conor-richard/"><i class="fab fa-linkedin"></i></a>
                       </div>
                     </div>
                   </figcaption>
@@ -187,12 +193,14 @@
                   <figcaption class="pb-3 mx-2 caption text-light">
                     <div class="">
                       <div class="bio-visible rounded-top py-3 px-1">
-                        <h5 class="h5">Darren Kim</h5>
+                        <h5 class="h5">Roger Zhang</h5>
                         <span class="h6 role">Project Manager</span>
                       </div>
                       <div class="bio-hidden px-1">
-                        <p> Hello my name is Darren and I like making finger guns </p>
-                        <a class="text-light h4" href="https://www.linkedin.com/in/darrenkim21/"><i class="fab fa-linkedin"></i></a>
+                        <p>
+                          Hello! I've been in PBL for 3 semesters now and absolutely loved growing myself alongside such wonderful people. This semester, I'm excited to be leading a client team with Conor. Outside of academics, I love singing wherever I go and crashing into trees while snowboarding!
+                        </p>
+                        <a class="text-light h4" href="https://www.linkedin.com/in/rogerzhang2/"><i class="fab fa-linkedin"></i></a>
                       </div>
                     </div>
                   </figcaption>
